--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "honepage": "https://hoantelseai.github.io/Iphone_website_Apple/",
   "name": "apple-website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
